fixed font colors in dark mode

--- a/vital/public/style.css
+++ b/vital/public/style.css
@@ -3,6 +3,7 @@
   --clr-navblue: #1672d9;
   --clr-ahover: #000000;
   --clr-accent: #1672d9;
+  --clr-font: rgb(0, 0, 0);
 }
 
 .darkmode {
@@ -10,6 +11,7 @@
   --clr-navblue: #404b69;
   --clr-ahover: #000000;
   --clr-accent: #00818a;
+  --clr-font: #fff;
 }
 
 body {
@@ -107,12 +109,17 @@ body {
     top: -7px;
 }
 
+::placeholder {
+  color: var(--clr-font);
+}
+
 .searchbox {
     height: 31px;
     width: 263px;
     border-radius: 33px;
     border-style: none;
     background: var(--clr-background);
+    color: var(--clr-font);
 }
 
 .contentbox {
@@ -249,7 +256,7 @@ textarea.editor {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   line-height: 1.5;
-  color: #24292e;
+  color: var(--clr-font);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
       Segoe UI Emoji;
   font-size: 16px;
